Hent kostnadssted til refusjonskrav
 - Flytt arrangor-flate dto'er inn i arrangor-flate pakke
